[package]

name = "ya-pkg-config"
version = "0.0.1"
authors = ["Ziqiao Kong <mio@lazym.io>", "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wtdcode/pkg-config-rs"
documentation = "https://docs.rs/pkg-config"
readme = "README.md"
description = """
Yet another pkg-config
"""
keywords = ["build-dependencies"]

[dev-dependencies]
lazy_static = "1"
